Add epsilon support to PhysicsSystem